Weather support added
